<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tpdappframework.mahesh.framework3.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_48dp"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
    <item android:id="@+id/exit_the_app"
        android:title="@string/taskbar_options_exit"
        android:orderInCategory="101"
        android:icon="@drawable/ic_exit_to_app_black_48dp" />
    <item android:id="@+id/home_button"
        android:title="@string/home_button"
        android:icon="@drawable/ic_home_white_48dp"
        app:showAsAction="ifRoom|withText"/>


</menu>
